brat/test/golden/error/bad_underscore2.brat.golden
Error in test/golden/error/bad_underscore2.brat@FC {start = Pos {line = 2, col = 13}, end = Pos {line = 2, col = 14}}:
uscore(i) = _
            ^

  Parse error unexpected _

